objects/ccrz__E_PriceGroupItem__c.object
<CustomObject>
    <description>Holds the items making up a price grouping.  These indicate the items that are part of the grouping, as well as a ny other controlling attributes, such as quantity range or control.</description>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <defaultValue>DATETIMEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>Date and Time at which this entry is expires</description>
        <inlineHelpText>Date and Time at which this entry is expires</inlineHelpText>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and Time at which this entry is takes effect</description>
        <inlineHelpText>Date and Time at which this entry is takes effect</inlineHelpText>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the entry is available.</description>
        <inlineHelpText>Determines if the entry is available.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroupItemID__c</fullName>
        <description>External ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field</inlineHelpText>
        <label>Price Group Item ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroup__c</fullName>
        <label>CC Price Group</label>
        <referenceTo>ccrz__E_PriceGroup__c</referenceTo>
        <relationshipLabel>CC Price Group Items</relationshipLabel>
        <relationshipName>PriceGroupItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product represented by this item.</description>
        <inlineHelpText>Product represented by this item.</inlineHelpText>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Price Group Items</relationshipLabel>
        <relationshipName>PriceGroupItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>Quantity for this item.  This can represent a max value supported by this item, or a minimum value supported depending on the corresponding implementation.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>CC Price Group Item</label>
    <nameField>
        <displayFormat>PGI-{0000000000}</displayFormat>
        <label>CC Price Group Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>